Add settings activity
User-configurable settings are provided for the JSON Coffee Status API as well
as the text based log file. Currently on the JSON interface is used.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,6 +26,9 @@
             </intent-filter>
         </activity>
 
+        <!-- Our second activity, the Preferences screen. -->
+        <activity android:name="Settings" />
+
     </application>
 
 </manifest>
