Rename for SFVLUG

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="edu.ucla.linux.tutorial"
+        package="org.sfvlug.tutorial"
         android:versionCode="1"
         android:versionName="1.0">
 
@@ -14,12 +14,12 @@
          older android version. -->
     <uses-sdk android:minSdkVersion="18" android:targetSdkVersion="18" />
 
-    <application android:label="LugAtUcla">
+    <application android:label="SfvLug">
 
         <!-- Our main activity, the user interface that runs when the app is
              started. The intent filter integrates our app with the "launcher",
              which is the App that displays the icons on the home screen. -->
-        <activity android:name="LugAtUcla" android:label="LugAtUcla">
+        <activity android:name="SfvLug" android:label="SfvLug">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
